2007-08-24  Timothy Hatcher  <timothy@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/5410937> HIWebView in SimpleCarbonWeb doesn't seem to be getting adequate invalidation when window is resized

        This is a more localized fix for yesterday's change. Now explicitly call _web_layoutIfNeededRecursive inside the
        HIWebView Draw() function. Adds a FIXME to explain that we need to do layout before Carbon has decided what regions to draw.
        Doing layout in Draw() will potentially cause drawing to happen in two passes, but this has always been a problem in Carbon.

        * Carbon/HIWebView.m:
        (Draw): Call _web_layoutIfNeededRecursive on the main WebHTMLView.
        (SetFocusPart): Fix to work in ObjC++ (now that HIWebView.m is treated as a ObjC++ file.)
        * WebView/WebView.mm: Removes the 4 displayIfNeeded methods from yesterday's change.
        * WebKit.xcodeproj/project.pbxproj: Force the file type of HIWebView.m to ObjC++ so WebHTMLViewInternal.h can be included.

2007-08-23  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Dave Hyatt.

        <rdar://problem/5410937> HIWebView in SimpleCarbonWeb doesn't seem to be getting adequate invalidation when window is resized

        The Carbon HIWebView was relying on layout happening when displayIfNeededInRect: was called on the WebView.
        This would happen on Tiger because _recursiveDisplayRectIfNeededIgnoringOpacity: would always do a layout if needed.
        Doing a layout in _recursiveDisplayRectIfNeededIgnoringOpacity was removed in Leopard in favor of viewWillDraw, and
        the fact that adding new dirty rects inside _recursiveDisplayRectIfNeededIgnoringOpacity on Leopard will not
        cause a drawRect in the same display loop.

        So any client on Leopard calling displayIfNeeded* on the WebView would get a layout and any new dirty rects. So